[gd_scene load_steps=21 format=3 uid="uid://fh4rmh44n0g8"]

[ext_resource type="Texture2D" uid="uid://c2w42c2hhmcqk" path="res://image resources/chest_closed.png" id="1_kwiw5"]
[ext_resource type="Script" path="res://chest.gd" id="1_s7ahc"]
[ext_resource type="Texture2D" uid="uid://ptcqtvl2ajgd" path="res://image resources/chest_open.png" id="2_vib36"]
[ext_resource type="Texture2D" uid="uid://c1nkr24m51aai" path="res://image resources/Shard_diamond.png" id="4_krey5"]
[ext_resource type="Texture2D" uid="uid://cg3ketpiq3oi" path="res://image resources/shard.png" id="5_k4b33"]
[ext_resource type="AudioStream" uid="uid://lfsdo5xsc2es" path="res://Music/Magic/Magic1.wav" id="6_s3x2k"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dlxsa"]
size = Vector2(29, 19)

[sub_resource type="SpriteFrames" id="SpriteFrames_7w2ty"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_kwiw5")
}, {
"duration": 1.0,
"texture": ExtResource("2_vib36")
}],
"loop": false,
"name": &"chest",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_go70x"]
atlas = ExtResource("5_k4b33")
region = Rect2(0, 0, 456, 488)

[sub_resource type="AtlasTexture" id="AtlasTexture_wwmym"]
atlas = ExtResource("5_k4b33")
region = Rect2(456, 0, 456, 488)

[sub_resource type="AtlasTexture" id="AtlasTexture_pe6ve"]
atlas = ExtResource("5_k4b33")
region = Rect2(912, 0, 456, 488)

[sub_resource type="AtlasTexture" id="AtlasTexture_r24ls"]
atlas = ExtResource("5_k4b33")
region = Rect2(0, 488, 456, 488)

[sub_resource type="AtlasTexture" id="AtlasTexture_j76rx"]
atlas = ExtResource("5_k4b33")
region = Rect2(456, 488, 456, 488)

[sub_resource type="AtlasTexture" id="AtlasTexture_qdwu8"]
atlas = ExtResource("5_k4b33")
region = Rect2(912, 488, 456, 488)

[sub_resource type="AtlasTexture" id="AtlasTexture_11hwx"]
atlas = ExtResource("5_k4b33")
region = Rect2(0, 976, 456, 488)

[sub_resource type="AtlasTexture" id="AtlasTexture_1k2im"]
atlas = ExtResource("5_k4b33")
region = Rect2(456, 976, 456, 488)

[sub_resource type="AtlasTexture" id="AtlasTexture_kenw4"]
atlas = ExtResource("5_k4b33")
region = Rect2(912, 976, 456, 488)

[sub_resource type="SpriteFrames" id="SpriteFrames_50fql"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_krey5")
}],
"loop": true,
"name": &"shard",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_go70x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wwmym")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pe6ve")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r24ls")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j76rx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qdwu8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_11hwx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1k2im")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kenw4")
}],
"loop": false,
"name": &"sharrd",
"speed": 9.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ff2d1"]
radius = 66.9355
height = 292.539

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w54l3"]
size = Vector2(43.75, 27.25)

[node name="Node2D" type="Node2D"]
script = ExtResource("1_s7ahc")

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]
position = Vector2(-4, -972)
shape = SubResource("RectangleShape2D_dlxsa")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CharacterBody2D/CollisionShape2D"]
position = Vector2(14.75, 952.259)
scale = Vector2(3.03125, 3.59259)
sprite_frames = SubResource("SpriteFrames_7w2ty")
animation = &"chest"

[node name="AnimatedSprite2D2" type="AnimatedSprite2D" parent="CharacterBody2D/CollisionShape2D"]
position = Vector2(-2, 954.354)
scale = Vector2(0.119518, 0.0957138)
sprite_frames = SubResource("SpriteFrames_50fql")
animation = &"sharrd"

[node name="collect_shard" type="Area2D" parent="CharacterBody2D/CollisionShape2D/AnimatedSprite2D2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D/CollisionShape2D/AnimatedSprite2D2/collect_shard"]
position = Vector2(-150.605, 79.8821)
shape = SubResource("CapsuleShape2D_ff2d1")

[node name="Collect_audio" type="AudioStreamPlayer2D" parent="CharacterBody2D/CollisionShape2D/AnimatedSprite2D2"]
stream = ExtResource("6_s3x2k")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(9, -8)
shape = SubResource("RectangleShape2D_w54l3")

[connection signal="body_entered" from="CharacterBody2D/CollisionShape2D/AnimatedSprite2D2/collect_shard" to="." method="_on_collect_shard_body_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
